Fix panel cutoff on experiments view

--- a/frontend/styles/views/experiments-view.css
+++ b/frontend/styles/views/experiments-view.css
@@ -1,5 +1,5 @@
-.default-view.experiments-view {
-  height: 100%;
+.experiments-view {
+  height: auto;
 }
 .experiments-view vaadin-split-layout > vaadin-vertical-layout {
   width: 100%;
@@ -9,4 +9,12 @@
   box-sizing: border-box;
   margin-top: var(--lumo-space-xs);
   overflow: hidden;
+}
+
+.experiments-view vaadin-split-layout > vaadin-vertical-layout[slot="primary"] {
+  height: auto !important;
+}
+
+.experiments-view juicy-ace-editor {
+  margin-top: 0;
 }
